- Fixed bug with large complexes on small screens - Fixed route order in station popup - Took off nav controls and gave popup more real estate
KNOWN BUGS
- Timestamp does not update in popup

--- a/src/components/StationPopup/station-popup.module.css
+++ b/src/components/StationPopup/station-popup.module.css
@@ -8,7 +8,6 @@
   overflow-y: auto;
   background-color: #f0f0f0;
   border-radius: 0.5rem;
-  padding: 0.75rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
   margin: 0;
   box-sizing: border-box;
@@ -33,6 +32,7 @@
   color: #111111;
   margin-bottom: 0.25rem;
   margin-top: 0.25rem;
+  padding: 0rem 0.5rem;
   border-radius: 0.3rem;
   max-width: 100%;
   word-wrap: break-word;
@@ -80,7 +80,6 @@
   display: flex;
   flex-direction: column;
   padding-top: 0.5rem;
- /* margin-bottom: 2rem;*/
   border-bottom: 1px solid rgba(0, 0, 0, 0.15);
  /* box-shadow: 0 1px 2px rgba(0,0,0,0.55);*/
   border-radius: 0.3rem;
@@ -97,6 +96,15 @@
 
 .cardWrapper:last-child {
   border-bottom: none;
+  margin-bottom: 2rem;
+}
+
+.lastUpdated {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #707070;
+  align-items: center;
+  justify-items: center;
+  font-size: 0.75rem;
 }
 
 .headerRow {
